# MLOps-zoomcamp-2024

./: Makefile  README.md  pyproject.toml
01-intro/: 01-homework.ipynb
02-experiment-tracking/: 02-experiment-tracking.ipynb
02-experiment-tracking/homework/: hpo.py  register_model.py  train.py
03-orchestration/: 03-orchestration.ipynb
03-orchestration/mlops/: docker-compose.yml
03-orchestration/mlops/mlops/: metadata.yaml
04-deployment/: Dockerfile  Makefile  pyproject.toml  requirements.txt  starter.ipynb  starter.py
05-monitoring/: 05_monitoring_homework.ipynb
05-monitoring/data/: reference.parquet
05-monitoring/workspace/28ebf255-d02c-4add-ad87-dd5467638f3b/: metadata.json
05-monitoring/workspace/4ea6712f-22d4-40a0-80d9-f64b507400fa/: metadata.json
05-monitoring/workspace/522c281d-5664-4c70-826f-f8ae972b0f66/: metadata.json
05-monitoring/workspace/522c281d-5664-4c70-826f-f8ae972b0f66/snapshots/: 467f5867-b64e-4e26-9123-f3c2f96f3834.json  6eb3a20b-03ff-4eab-b274-e1082ae5ea4c.json
05-monitoring/workspace/63edac3e-a7f5-48eb-9ad5-2aa61078fae7/: metadata.json
05-monitoring/workspace/63edac3e-a7f5-48eb-9ad5-2aa61078fae7/snapshots/: 83921524-8708-45fe-a61d-df73fc0076db.json  ceed3df2-d475-48d0-b216-f9e8d82f57b6.json
05-monitoring/workspace/a7a382c1-171c-4fa8-9ecd-8fa734e9371b/: metadata.json
05-monitoring/workspace/a7a382c1-171c-4fa8-9ecd-8fa734e9371b/snapshots/: 298d6ac0-8dba-4f45-b382-5e76c682bdad.json  9ccc3c14-3711-43b7-a062-457a81a97805.json
05-monitoring/workspace/dd061cd0-23c0-4fe0-9b45-31ec69057c19/: metadata.json
06-best-practices/: Makefile  Pipfile  README.md  batch.py  docker-compose.yml  integration_test.py
06-best-practices/tests/: test_batch.py
mlflow/: mlflow.db
mlruns/0/: meta.yaml
mlruns/922245322047101247/: meta.yaml
playground/02-experiment-tracking/: 01-homework.ipynb
playground/02-experiment-tracking/running-mlflow-examples/: scenario-1.ipynb  scenario-2.ipynb
playground/05-Monitoring/: =1.5  docker-compose.yml  dummy_metrics_calculation.py  evidently_metrics_calculation.py  pyproject.toml
playground/05-Monitoring/config/: grafana_datasources.yaml
playground/05-Monitoring/dashboards/: data_drift.json
playground/05-Monitoring/taxi_monitoring/: pyproject.toml
playground/05-Monitoring/workspace/fa462bd6-42f0-4967-8d88-2ca9f1db3115/: metadata.json
playground/05-Monitoring/workspace/fa462bd6-42f0-4967-8d88-2ca9f1db3115/snapshots/: 4264826f-e9ee-4ed6-babc-989808c53a84.json
playground/05-Monitoring/workspace/fba1d514-a971-40b9-9e0d-faf6f1ee8922/: metadata.json
playground/05-Monitoring/workspace/fba1d514-a971-40b9-9e0d-faf6f1ee8922/snapshots/: 7a49497b-cd1a-4409-96e8-ce4f13a8c928.json  d1075f88-843d-4274-be70-f3ddcac20ed8.json
playground/06-best-practices/: Pipfile
(+74 files in other folders)
