[tool.poetry]
name = "mlops-zoomcamp-2024"
version = "0.1.0"
description = ""
authors = ["Emanuel Tomé <emanuelrstome@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
scikit-learn = "^1.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
