[tool.poetry]
name = "mlops-zoomcamp-2024"
version = "0.1.0"
description = ""
authors = ["Emanuel Tomé <emanuelrstome@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
pyarrow = "15"
scikit-learn = "1.5.0"
seaborn = "^0.13.2"
hyperopt = "^0.2.7"
xgboost = "^2.0.3"
mlflow = "^2.13.0"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
mlflow = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
